--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -72,6 +72,14 @@
   text-transform: uppercase;
 }
 
+.light-text {
+  color: white;
+}
+
+.dark-text {
+  color: rgba(0, 0, 0, 0.5);
+}
+
 .copy-overlay {
   opacity: 0;
   z-index: 0;
