--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -52,3 +52,16 @@
   margin-left: auto;
   margin-right: 1rem;
 }
+@media (max-width: 950px) {
+  .Navbar-slider {
+    width: 200px;
+  }
+}
+@media (max-width: 500px) {
+  .Navbar-logo {
+    display: none;
+  }
+  .Navbar-slider {
+    width: 180px;
+  }
+}
