--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 /* .App {
   text-align: center;
 } */
+
+/* .fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+} */
